[CHORE] 기타 수정 사항 적용

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,233 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.registration.LoginActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_register_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_btn_back" />
-
-    <TextView
-        android:id="@+id/tv_register_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="17dp"
-        android:text="@string/register_register"
-        android:fontFamily="@font/spoqa_han_sans_neo_bold"
-        android:textColor="#1c1c1c"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_register_back" />
-
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.registration.LoginActivity">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/iv_register_back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_btn_back" />
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:text="@string/register_name"
-        android:textColor="#1c1c1c"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
-
-    <EditText
-        android:id="@+id/et_name"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/selector_apply_search"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:hint="@string/register_name"
-        android:inputType="textPersonName"
-        android:paddingStart="12dp"
-        android:textColor="#1c1c1c"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
-
-    <TextView
-        android:id="@+id/tv_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:text="이메일"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:textSize="14sp"
-        android:textColor="#1c1c1c"
-        app:layout_constraintStart_toStartOf="@+id/tv_name"
-        app:layout_constraintTop_toBottomOf="@+id/et_name" />
-
-    <EditText
-        android:id="@+id/et_email_register"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/selector_apply_search"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:hint="이메일"
-        android:inputType="none|textEmailAddress"
-        android:paddingStart="12dp"
-        android:textColor="#1c1c1c"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/et_name"
-        app:layout_constraintStart_toStartOf="@+id/et_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_id" />
-
-    <TextView
-        android:id="@+id/tv_warning_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:text="TextView"
-        android:textColor="#ff0000"
-        android:textSize="12sp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/et_email_register"
-        app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
-
-    <TextView
-        android:id="@+id/tv_pw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:text="@string/pw"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:textSize="14sp"
-        android:textColor="#1c1c1c"
-        app:layout_constraintStart_toStartOf="@+id/tv_id"
-        app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
-
-    <EditText
-        android:id="@+id/et_pw"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/selector_apply_search"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:hint="@string/pw"
-        android:inputType="textPassword"
-        android:maxLength="16"
-        android:paddingStart="12dp"
-        android:textColor="#1c1c1c"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/et_email_register"
-        app:layout_constraintStart_toStartOf="@+id/et_email_register"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pw" />
-
-    <TextView
-        android:id="@+id/tv_warning_pw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:text="TextView"
-        android:textColor="#ff0000"
-        android:textSize="12sp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/et_email_register"
-        app:layout_constraintTop_toBottomOf="@+id/et_pw" />
-
-    <TextView
-        android:id="@+id/tv_checkpw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:text="@string/register_checkpw"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:textSize="14sp"
-        android:textColor="#1c1c1c"
-        app:layout_constraintStart_toStartOf="@+id/tv_pw"
-        app:layout_constraintTop_toBottomOf="@+id/et_pw" />
-
-    <EditText
-        android:id="@+id/et_checkpw"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/selector_apply_search"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:hint="@string/register_checkpw"
-        android:inputType="textPassword"
-        android:paddingStart="12dp"
-        android:textColor="#1c1c1c"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/et_pw"
-        app:layout_constraintStart_toStartOf="@+id/et_pw"
-        app:layout_constraintTop_toBottomOf="@+id/tv_checkpw" />
-
-    <TextView
-        android:id="@+id/tv_warning_checkpw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/spoqa_han_sans_neo_regular"
-        android:text="TextView"
-        android:textColor="#ff0000"
-        android:textSize="12sp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/et_email_register"
-        app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
-
-    <View
-        android:id="@+id/view_line"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_marginTop="24dp"
-        android:background="#e7e7e7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_register"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/rectangle_gray02_10"
-        android:clickable="false"
-        android:enabled="false"
-        android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:text="@string/register_register"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/et_pw"
-        app:layout_constraintStart_toStartOf="@+id/et_pw"
-        app:layout_constraintTop_toBottomOf="@+id/view_line" />
+        <TextView
+            android:id="@+id/tv_register_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="17dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            android:text="@string/register_register"
+            android:textColor="#1c1c1c"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_register_back" />
 
 
-<!--
-    <TimePicker
-        android:layout_width="wrap_content"
-        android:layout_height="63dp"
-        android:layout_centerHorizontal="true"
-        android:timePickerMode="spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
-        -->
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="@string/register_name"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
+
+        <EditText
+            android:id="@+id/et_name"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/selector_apply_search"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:hint="@string/register_name"
+            android:inputType="textPersonName"
+            android:paddingStart="12dp"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+        <TextView
+            android:id="@+id/tv_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="42dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="이메일"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_name"
+            app:layout_constraintTop_toBottomOf="@+id/et_name" />
+
+        <EditText
+            android:id="@+id/et_email_register"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/selector_apply_search"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:hint="이메일"
+            android:inputType="none|textEmailAddress"
+            android:paddingStart="12dp"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/et_name"
+            app:layout_constraintStart_toStartOf="@+id/et_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_id" />
+
+        <TextView
+            android:id="@+id/tv_warning_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="TextView"
+            android:textColor="#ff0000"
+            android:textSize="12sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/et_email_register"
+            app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
+
+        <TextView
+            android:id="@+id/tv_pw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="42dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="@string/pw"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_id"
+            app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
+
+        <EditText
+            android:id="@+id/et_pw"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/selector_apply_search"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:hint="@string/pw"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:paddingStart="12dp"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/et_email_register"
+            app:layout_constraintStart_toStartOf="@+id/et_email_register"
+            app:layout_constraintTop_toBottomOf="@+id/tv_pw" />
+
+        <TextView
+            android:id="@+id/tv_warning_pw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="TextView"
+            android:textColor="#ff0000"
+            android:textSize="12sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/et_email_register"
+            app:layout_constraintTop_toBottomOf="@+id/et_pw" />
+
+        <TextView
+            android:id="@+id/tv_checkpw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="42dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="@string/register_checkpw"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_pw"
+            app:layout_constraintTop_toBottomOf="@+id/et_pw" />
+
+        <EditText
+            android:id="@+id/et_checkpw"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/selector_apply_search"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:hint="@string/register_checkpw"
+            android:inputType="textPassword"
+            android:paddingStart="12dp"
+            android:textColor="#1c1c1c"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/et_pw"
+            app:layout_constraintStart_toStartOf="@+id/et_pw"
+            app:layout_constraintTop_toBottomOf="@+id/tv_checkpw" />
+
+        <TextView
+            android:id="@+id/tv_warning_checkpw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:text="TextView"
+            android:textColor="#ff0000"
+            android:textSize="12sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/et_email_register"
+            app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
+
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_marginTop="24dp"
+            android:background="#e7e7e7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_register"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rectangle_gray02_10"
+            android:clickable="false"
+            android:enabled="false"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:text="@string/register_register"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/et_pw"
+            app:layout_constraintStart_toStartOf="@+id/et_pw"
+            app:layout_constraintTop_toBottomOf="@+id/view_line" />
+
+
+        <!--
+            <TimePicker
+                android:layout_width="wrap_content"
+                android:layout_height="63dp"
+                android:layout_centerHorizontal="true"
+                android:timePickerMode="spinner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
+                -->
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
+
