--- a/app/src/main/res/layout/item_calendar_event.xml
+++ b/app/src/main/res/layout/item_calendar_event.xml
@@ -91,7 +91,7 @@
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_friend_list"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginLeft="22dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="13dp"
