--- a/app/src/main/res/layout/view_mypage.xml
+++ b/app/src/main/res/layout/view_mypage.xml
@@ -82,6 +82,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_mypage_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
