--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,7 +33,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_register_back" />
 
-
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
@@ -71,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="42dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="이메일"
+            android:text="@string/email"
             android:textColor="#1c1c1c"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_name"
@@ -84,7 +83,7 @@
             android:layout_marginTop="12dp"
             android:background="@drawable/selector_apply_search"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:hint="이메일"
+            android:hint="@string/email"
             android:inputType="none|textEmailAddress"
             android:paddingStart="12dp"
             android:textColor="#1c1c1c"
@@ -215,17 +214,6 @@
             app:layout_constraintStart_toStartOf="@+id/et_pw"
             app:layout_constraintTop_toBottomOf="@+id/view_line" />
 
-
-        <!--
-            <TimePicker
-                android:layout_width="wrap_content"
-                android:layout_height="63dp"
-                android:layout_centerHorizontal="true"
-                android:timePickerMode="spinner"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
-                -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
