--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:fontFamily="@font/spoqa_han_sans_neo_regular"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColor=" #1c1c1c"
+        android:textColor="@color/gray06"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:hint="@string/pw"
         android:inputType="textPassword"
         android:paddingStart="16dp"
-        android:textColor=" #1c1c1c"
+        android:textColor="@color/gray06"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/et_email"
         app:layout_constraintStart_toStartOf="@+id/et_email"
@@ -91,8 +91,8 @@
         android:text="SeeMeet"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintEnd_toStartOf="@+id/tv_register"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_login"
         app:srcCompat="@drawable/ic_img_seemeet_logo_typo_banner" />
@@ -103,11 +103,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginTop="21dp"
-        android:text="@string/login_register"
         android:fontFamily="@font/spoqa_han_sans_neo_medium"
-        android:textStyle="normal"
+        android:text="@string/login_register"
+        android:textColor="@color/gray05"
         android:textSize="14sp"
-        android:textColor="#4b4b4b"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_small_logo"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
