--- a/app/src/main/res/layout/dialog_send_cancel.xml
+++ b/app/src/main/res/layout/dialog_send_cancel.xml
@@ -30,7 +30,7 @@
                     android:textSize="18sp"
                     android:textColor="@color/gray06"
                     android:letterSpacing="-0.01"
-                    android:text="약속 취소"
+                    android:text="@string/send_content_msg"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -58,7 +58,7 @@
                     android:textSize="16sp"
                     android:textColor="@color/gray05"
                     android:letterSpacing="-0.01"
-                    android:text="약속을 취소하시겠어요?"
+                    android:text="@string/send_cancel_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -82,7 +82,7 @@
                     android:paddingStart="14dp"
                     android:paddingTop="14dp"
                     android:layout_marginTop="24dp"
-                    android:text="아니요"
+                    android:text="@string/send_cancel_no"
                     app:layout_constraintTop_toBottomOf="@id/tv_send_cancel"
                     app:layout_constraintEnd_toStartOf="@id/btn_send_dia_cancel_yes"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -103,7 +103,7 @@
                     android:paddingTop="14dp"
                     android:layout_marginBottom="6dp"
                     android:layout_marginStart="4dp"
-                    android:text="예"
+                    android:text="@string/send_cancel_yes"
                     android:layout_marginTop="24dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_send_cancel"
                     app:layout_constraintEnd_toEndOf="parent"
