--- a/app/src/main/res/drawable/rectangle_white_top10.xml
+++ b/app/src/main/res/drawable/rectangle_white_top10.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#fff"/>
-    <corners android:radius="10dp"/>
+    <corners android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
 </shape>
